--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
