--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.1"
   },
   "type": "module",
   "devDependencies": {
