--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1"
   }
 }
