--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.1.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pg": "^8.13.1"
   },
   "type": "module",
   "devDependencies": {
